<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.me.cyberindigointerview.viewmodel.LogInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        tools:context=".ui.LogInActivity">

        <ImageView
            android:layout_width="@dimen/dp150"
            android:layout_height="@dimen/dp150"
            android:src="@drawable/cyberindigo_interview"
            android:background="@drawable/imageview_background"
            android:contentDescription="@string/loginimage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/sp30"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_margin="@dimen/dp10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pink_out_line"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp20"
            android:padding="@dimen/dp10">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_username"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/sp18"
                android:layout_margin="@dimen/dp10"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{viewmodel::onEmailChanged}"
                android:text="@={viewmodel.email}"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_password"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/sp18"
                android:layout_margin="@dimen/dp10"
                android:inputType="textPassword"
                android:onTextChanged="@{viewmodel::onPasswordChanged}"
                android:text="@={viewmodel.password}"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:padding="@dimen/dp10"
                android:background="@drawable/button_background"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="@dimen/sp25"
                android:textColor="@color/white"
                android:enabled="@{viewmodel.btnSelected}"
                android:onClick="@{()->viewmodel.login()}" />
        </LinearLayout>
    </LinearLayout>
</layout>